# internship-pipeline

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_companies.py  0002_create_users.py  0003_create_contacts.py  0004_create_applications.py  0005_create_discovery.py  0006_add_company_ownership.py  0007_create_discovery_sources.py  0008_add_getonboard_source_type.py  0009_new_modules.py
backend/app/: config.py  db.py  main.py
backend/app/enrichers/: apollo_enricher.py  base.py  github_enricher.py  linkedin_enricher.py
backend/app/models/: __init__.py  application.py  company.py  contact.py  discovery_candidate.py  discovery_source.py  interview.py  job_posting.py  outreach_log.py  template.py  user.py  visa_data.py
backend/app/routers/: applications.py  companies.py  contacts.py  dashboard.py  discovery.py  discovery_sources.py  interviews.py  outreach.py  reminders.py  tech_matcher.py  templates.py  users.py  visa.py
backend/app/schemas/: application.py  company.py  contact.py  dashboard.py  discovery.py  interview.py  outreach_log.py  reminder.py  template.py  user.py  visa_data.py
backend/app/services/: ats_sources.py  discovery.py  email_sender.py  (+4 more)
backend/tests/: conftest.py  test_applications.py  test_companies.py  test_contacts.py  test_dashboard.py  test_discovery.py  test_discovery_sources.py  test_interviews.py  test_job_postings.py  test_reminders.py  test_tech_matcher.py  test_users.py  test_visa.py
(+56 files in other folders)
