[project]
name = "internship-pipeline-backend"
version = "0.1.0"
description = "FastAPI backend for the internship pipeline."
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.0",
    "asyncpg>=0.29.0",
    "email-validator>=2.1.0",
    "fastapi>=0.110.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.2.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "sqlalchemy>=2.0.0",
    "uvicorn[standard]>=0.29.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "strict"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
